# pycore-group-project

./: Dockerfile  README.md  pyproject.toml
personal_assistant_folder/: AddressBook.py  NotesList.py  personal_assistant.py  setup.py
personal_assistant_folder/Jarlis.egg-info/: PKG-INFO  SOURCES.txt
personal_assistant_folder/address_book/: Record.py
personal_assistant_folder/address_book/fields/: Address.py  Birthday.py  Email.py  Name.py  Phone.py
personal_assistant_folder/application/: ConsoleApplication.py
personal_assistant_folder/data_managers/: AddressBookManager.py  DataManager.py  FileSorter.py  NotesListManager.py
personal_assistant_folder/decorators/: HandleDecorator.py
personal_assistant_folder/helpers/: Logger.py  Pagination.py  Serialization.py
personal_assistant_folder/notes/: Note.py
personal_assistant_folder/notes/fields/: Content.py  Tag.py  Title.py
personal_assistant_folder/personal_assistant_folder/: AddressBook.py  Menu.py  NotesList.py  personal_assistant.py
personal_assistant_folder/personal_assistant_folder/address_book/: Record.py
personal_assistant_folder/personal_assistant_folder/application/: Application.py  ConsoleApplication.py
personal_assistant_folder/personal_assistant_folder/data_managers/: AddressBookManager.py  FileSorter.py  NotesListManager.py
personal_assistant_folder/personal_assistant_folder/notes/: Note.py
personal_assistant_folder/personal_assistant_folder/sorting_files/: Scanner.py  (+1 more)
personal_assistant_folder/sorting_files/: Scanner.py  Sorting.py
personal_assistant_folder/ui/: ConsoleUIManager.py
(+10 files in other folders)
